--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.1",
     "react-router": "^7.0.2",
     "zustand": "^5.0.2"
   },
