--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.54.1",
     "react-hot-toast": "^2.4.1",
     "react-router": "^7.0.2",
+    "recharts": "^2.15.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
